# cired.digital

./: .gitignore  .pre-commit-config.yaml  CeCILL FREE SOFTWARE LICENSE AGREEMENT.html  README.md  TODO.md  project.code-workspace  pyproject.toml  pytest.ini
.github/: dependabot.yml
.github/codeql/: codeql-suppressions.yml
.github/workflows/: CI.yml  lint.yml
credentials/: API_KEYS.template
data/: README.md
data/source/: blacklist.json
deploy/: .env  .env.example  HOWTO-deploy.md  README.md  SECURING.md  compose.override.yaml.template  compose.yaml
deploy/ops/: bootstrap.sh  clean.sh  common_config.sh  deploy.sh  down.sh  install.sh  pull_monitor_logs.sh  push_secrets.sh  push_snapshot.sh  up.sh  validate.sh
deploy/ops/monthly/: AGENTS.md  MAINTENANCE_monthly_2025-09-24.md  MAINTENANCE_monthly_checklist.md
deploy/scripts/: create-hatchet-db.sh  start-r2r.sh
deploy/user_configs/: cidir2r.ollama.toml  cidir2r.toml
docs/: CODE_STYLE.md  CONTRIBUTING.md  R2R-installnotes.md  Twelve-Factor patterns.md  architecture.md  blueprints.md  coding_style.md  docker basics.md  experience_ideas.md
reports/: README.md  monitor_logs_eda.ipynb  monitor_logs_eda.ipynb.bak
src/: README.md
src/analysis/: CIRED_digital_beta_dashboard_spec.md  README.md  analysis_config.yaml  analyze_monitor_logs.py  beta_dashboard_app.py  classifier.py  describe_events.py  describe_sessions.py  fig_activity.py  fig_provenance.py  fig_sessions.py  ipclassifier.py  logloader.py  tabulate_queries.py
src/analytics/: Dockerfile  feedback_server.py  generate_wordcloud.py  models.py  monitor.py  render_utils.py  utils.py
src/analytics/templates/: privacy.html
src/cired_chatbot/scripts/: __init__.py  download.py  harvest_fulltext.py  push.py  scrape.py
src/data_preparation/: __init__.py  config.py  download.py  push.py  query.py
src/docker/: HOWTO-deploy.md  README.md  compose.yaml
src/docker/ops/: clean.sh  common_config.sh  down.sh  install.sh  push_snapshot.sh  restore.sh  snapshot.sh  up.sh  validate.sh
src/engine/: HOWTO-deploy.md  README.md  clean.sh  common_config.sh  compose.override.yaml  install.sh  push_snapshot.sh  up.sh
src/engine/env/: r2r-full.env
src/engine/ops/: clean.sh  common_config.sh  down.sh  install.sh  push_snapshot.sh  restore.sh  snapshot.sh  up.sh  validate.sh
src/engine/scripts/: clean.sh  common_config.sh  up.sh  validate.sh
src/engine/smoke-tests/: r2r_test_utils.py
src/engine/user_configs/: cidir2r.toml
src/frontend/: CIRED_connect_client.html  api.js  app-init.js  aside.css  body.css  citations.js  config-logic.js  config-panel.js  config-ui.js  config.js  content-manager.js  economics.js  example.txt  generate_wordcloud.py  help-logic.js  help-panel.js  help-ui.js  index.html  main.css  messages.js  mode-emploi-panel.js  onboarding-logic.js  onboarding-panel.js  onboarding-ui.js  page.css  panels.css  profile-logic.js  profile-panel.js  profile-ui.js  profile.js  query-processor.js  settings-logic.js  settings-ui.js  settings.js  status.js  stream-handler.js  tooltips.js  ui.js  utils.js
src/frontend/dialogs/: dialogs.css  profile-logic.js  profile-ui.js  settings-logic.js  settings-ui.js
src/frontend/static/: generate_wordcloud.py  words.py
src/intake/: TODO.md  align_metadata.py  catalog_utils.py  config.py  cull.py  download.py  hal_query.py  pc2.py  prepare_catalog.py  push.py  query.py  requirements.txt  utils.py  verify.py
src/monitor/: Dockerfile  models.py  monitor.py
src/orchestration/: README.md  ragctl.py  rate-limit-monitor.py
src/orchestration/LlamaIndex/: build_index.py  build_index_mistral.py  testing_report.md
src/orchestration/PaperQA2/: testing_report.md
src/orchestration/R2R/: Action_Plan.md  HOWTO-deploy.md  Makefile  TODO.md  clean.sh  common_config.sh  compose.override.yaml  down.sh  install.sh  restore.sh  snapshot.sh  start.sh  stop.sh  up.sh  validate.sh
src/orchestration/R2R/smoke-tests/: LLM_swap.py  hello_r2r.py  r2r_test_utils.py
src/rag_engines/: r2r_client.py
templates/: privacy.html
tests/: __init__.py  conftest.py  test_api_keys.py  test_container_logs.py  test_health_endpoint.py  up.py
tests/analytics/: test_feedback_server.py
tests/e2e/: test_chat.py  test_landing.py  test_prod_chat.py  test_prod_homepage.py
tests/engine/: test_smoke_tests.py
tests/fixtures/reports/monitor-logs/2025/07/09/: session_1751905006481_d6r5o183x4-20250709T210454460Z-visibilityChange.json  session_1751905006481_d6r5o183x4-20250709T210455050Z-visibilityChange.json  session_1751984977977_721iop713z-20250709T153523161Z-visibilityChange.json  session_1752047301830_6q523q8t25-20250709T074821833Z-sessionStart.json  session_1752056825252_53w1u1h1u6-20250709T102705490Z-sessionStart.json  session_1752065764758_21q2yj623e-20250709T125604853Z-sessionStart.json  session_1752065764758_21q2yj623e-20250709T125604891Z-visibilityChange.json  session_1752065764758_21q2yj623e-20250709T125617112Z-visibilityChange.json  session_1752065764758_21q2yj623e-20250709T125619680Z-visibilityChange.json  session_1752065764758_21q2yj623e-20250709T185906984Z-visibilityChange.json  session_1752065764758_21q2yj623e-20250709T185909947Z-visibilityChange.json  session_1752065764758_21q2yj623e-20250709T210438542Z-visibilityChange.json  session_1752065764758_21q2yj623e-20250709T210441611Z-visibilityChange.json  session_1752067424971_1v4z4p2e1a-20250709T132345068Z-sessionStart.json  session_1752067424971_1v4z4p2e1a-20250709T132356376Z-visibilityChange.json  (+3 more)
tests/intake/: test_config.py  test_download.py  test_push.py  test_query.py  test_verify.py
tests/smoke/: __init__.py  conftest.py  helpers.py  test_hello_r2r.py  test_llm_swap.py  test_rag_LLMs.py  test_rag_query.py
tests/smoke-tests/: r2r_test_utils.py
tools-eval/LlamaIndex/: MakeFile_doc.md  Makefile  build_index.py  build_index_mistral.py  testing_report.md
tools-eval/PaperQA2/: MakeFile_Docs.md  Makefile
tools-eval/R2R/: Makefile  compose.override.yaml  hello_r2r.py  start.sh  stop.sh  test-varied-LLMs.py
(+788 files in other folders)
