# pyproject.toml — Project configuration for cired.digital project
# Maintainer: Minh Ha-Duong <minh.ha-duong@cnrs.fr>
#
# This file defines project metadata, dependencies, and tool configurations.
# It is the single source of truth to implement the dest practices
# described in    docs/CODE_STYLE.md
#
# Python 3.11+, using:
# - Ruff for linting, formatting, and complexity checks
#   See: https://docs.astral.sh/ruff/
# - mypy for type verification
# - Pytest for unit testing   (coming soon)

[project]
name = "cired-chatbot"
version = "0.0.1"
description = "Scripts and data for a chatbot with CIRED publications"
authors = [
  { name="Minh Ha-Duong", email="minh.ha-duong@cnrs.fr" },
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
  "requests",
  "fastapi",
  "uvicorn[standard]",
  "r2r",
  "pydantic>=2.0,<3.0",
]

# Note: Ubuntu distro version of `ruff`, `pytest`, `mypy` tend to be old.
# Rather install the latest version in `.local/bin/` with
#    `pipx install ruff pytest mypy pre-commit`
#
[project.optional-dependencies]
dev = [
  "ruff>=0.11.12,<1.0.0",
  "pytest>=7.0,<9.0",
  "mypy>=1.16,<2.0",
  "pre-commit>=3.0,<5.0",
  "types-requests",
  "pandas-stubs",
]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "C90", "D", "UP"]
ignore = ["E501", "D203", "D212"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
strict = true
warn_unused_ignores = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "r2r.*",
    # Add other modules without types here
]
ignore_missing_imports = true
